# serializer version: 1
# name: test_sort_dipoles_by_freq
  list([
    list([
      100.0,
      200.0,
      300.0,
      400.0,
      500.0,
      600.0,
      0.07,
    ]),
    list([
      1.0,
      2.0,
      3.0,
      4.0,
      5.0,
      6.0,
      7.0,
    ]),
    list([
      10.0,
      200.0,
      30.0,
      41.0,
      315.0,
      0.31,
      100.0,
    ]),
  ])
# ---
# name: test_sort_dipoleses_by_freq
  list([
    list([
      list([
        100.0,
        200.0,
        300.0,
        400.0,
        500.0,
        600.0,
        0.07,
      ]),
      list([
        1.0,
        2.0,
        3.0,
        4.0,
        5.0,
        6.0,
        7.0,
      ]),
      list([
        10.0,
        200.0,
        30.0,
        41.0,
        315.0,
        0.31,
        100.0,
      ]),
    ]),
    list([
      list([
        1.0,
        1.0,
        1.0,
        1.0,
        1.0,
        1.0,
        100.0,
      ]),
      list([
        22.0,
        22.2,
        2.2,
        222.0,
        22.0,
        2.0,
        200.0,
      ]),
      list([
        33.0,
        33.3,
        33.0,
        3.3,
        0.33,
        0.3,
        300.0,
      ]),
    ]),
  ])
# ---
